--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,9 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Movies Database you can search for moview you want and get more information for this movie
+
+      "
     />
     <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -40,7 +42,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Movies Database App</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
